{
  "version": 4,
  "terraform_version": "1.11.1",
  "serial": 303,
  "lineage": "ccac755c-39a6-606b-c3b7-e59d789ca9a4",
  "resources": [
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_control_plane",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590184134827:security-group/sg-070041e19200edbe6",
            "description": "EKS Control Plane Security Group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-070041e19200edbe6",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow worker nodes to communicate with EKS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-03f71374147e05598"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "task-management-cluster-atul-control-plane",
            "name_prefix": "",
            "owner_id": "590184134827",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-055727f7b18bb1c7a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_key_pair.eks_key",
            "local_file.eks_node_private_key",
            "module.eks.aws_security_group.eks_worker_nodes",
            "module.eks_iam.aws_iam_role.eks_cluster_role",
            "module.eks_iam.aws_iam_role_policy_attachment.eks_cluster_AmazonEC2ContainerRegistryReadOnly",
            "module.eks_iam.aws_iam_role_policy_attachment.eks_cluster_AmazonEKSClusterPolicy",
            "module.eks_iam.aws_iam_role_policy_attachment.eks_cluster_AmazonEKSVPCResourceController",
            "module.eks_iam.aws_iam_role_policy_attachment.eks_cluster_AmazonEKSWorkerNodePolicy",
            "module.eks_iam.aws_iam_role_policy_attachment.eks_cluster_AmazonEKS_CNI_Policy",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public_route_table",
            "module.vpc.aws_route_table_association.public_subnet_assoc_1",
            "module.vpc.aws_route_table_association.public_subnet_assoc_2",
            "module.vpc.aws_subnet.public_subnet_1",
            "module.vpc.aws_subnet.public_subnet_2",
            "module.vpc.aws_vpc.main_vpc",
            "tls_private_key.eks_node_key"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "eks_worker_nodes",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590184134827:security-group/sg-03f71374147e05598",
            "description": "Security group for EKS worker nodes",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03f71374147e05598",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow all traffic between worker nodes",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              }
            ],
            "name": "task-management-cluster-atul-worker-nodes",
            "name_prefix": "",
            "owner_id": "590184134827",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-055727f7b18bb1c7a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_key_pair.eks_key",
            "local_file.eks_node_private_key",
            "module.eks_iam.aws_iam_role.eks_cluster_role",
            "module.eks_iam.aws_iam_role_policy_attachment.eks_cluster_AmazonEC2ContainerRegistryReadOnly",
            "module.eks_iam.aws_iam_role_policy_attachment.eks_cluster_AmazonEKSClusterPolicy",
            "module.eks_iam.aws_iam_role_policy_attachment.eks_cluster_AmazonEKSVPCResourceController",
            "module.eks_iam.aws_iam_role_policy_attachment.eks_cluster_AmazonEKSWorkerNodePolicy",
            "module.eks_iam.aws_iam_role_policy_attachment.eks_cluster_AmazonEKS_CNI_Policy",
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public_route_table",
            "module.vpc.aws_route_table_association.public_subnet_assoc_1",
            "module.vpc.aws_route_table_association.public_subnet_assoc_2",
            "module.vpc.aws_subnet.public_subnet_1",
            "module.vpc.aws_subnet.public_subnet_2",
            "module.vpc.aws_vpc.main_vpc",
            "tls_private_key.eks_node_key"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590184134827:internet-gateway/igw-0d281b518db3da0ec",
            "id": "igw-0d281b518db3da0ec",
            "owner_id": "590184134827",
            "tags": {
              "Env": "dev",
              "Name": "task-mgmt-vpc-igw",
              "Owner": "atul.pandey@talentica.com",
              "System": "CloudOps"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "task-mgmt-vpc-igw",
              "Owner": "atul.pandey@talentica.com",
              "System": "CloudOps"
            },
            "vpc_id": "vpc-055727f7b18bb1c7a"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590184134827:route-table/rtb-042d1a3dcf43d1869",
            "id": "rtb-042d1a3dcf43d1869",
            "owner_id": "590184134827",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0d281b518db3da0ec",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Env": "dev",
              "Name": "task-mgmt-vpc-public-rt",
              "Owner": "atul.pandey@talentica.com",
              "System": "CloudOps"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "task-mgmt-vpc-public-rt",
              "Owner": "atul.pandey@talentica.com",
              "System": "CloudOps"
            },
            "timeouts": null,
            "vpc_id": "vpc-055727f7b18bb1c7a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_assoc_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-094c6c3eebb14a11c",
            "route_table_id": "rtb-042d1a3dcf43d1869",
            "subnet_id": "subnet-084e9d9a5dff3fb90"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public_route_table",
            "module.vpc.aws_subnet.public_subnet_1",
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_assoc_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c3c1efa9baea45f1",
            "route_table_id": "rtb-042d1a3dcf43d1869",
            "subnet_id": "subnet-090536b2e845270d5"
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public_route_table",
            "module.vpc.aws_subnet.public_subnet_2",
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590184134827:subnet/subnet-084e9d9a5dff3fb90",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-084e9d9a5dff3fb90",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "590184134827",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Env": "dev",
              "Name": "task-mgmt-vpc-public-subnet-1",
              "Owner": "atul.pandey@talentica.com",
              "System": "CloudOps",
              "kubernetes.io/cluster/task-management-cluster-atul": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "task-mgmt-vpc-public-subnet-1",
              "Owner": "atul.pandey@talentica.com",
              "System": "CloudOps",
              "kubernetes.io/cluster/task-management-cluster-atul": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-055727f7b18bb1c7a"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590184134827:subnet/subnet-090536b2e845270d5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-090536b2e845270d5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "590184134827",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Env": "dev",
              "Name": "task-mgmt-vpc-public-subnet-2",
              "Owner": "atul.pandey@talentica.com",
              "System": "CloudOps",
              "kubernetes.io/cluster/task-management-cluster-atul": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "task-mgmt-vpc-public-subnet-2",
              "Owner": "atul.pandey@talentica.com",
              "System": "CloudOps",
              "kubernetes.io/cluster/task-management-cluster-atul": "owned",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-055727f7b18bb1c7a"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main_vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:590184134827:vpc/vpc-055727f7b18bb1c7a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0b80eaba7ef44838d",
            "default_route_table_id": "rtb-062b7e093dd055fe1",
            "default_security_group_id": "sg-0b939e88dc9d7eca9",
            "dhcp_options_id": "dopt-0f357f90d7f90fc1e",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-055727f7b18bb1c7a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-062b7e093dd055fe1",
            "owner_id": "590184134827",
            "tags": {
              "Env": "dev",
              "Name": "task-mgmt-vpc",
              "Owner": "atul.pandey@talentica.com",
              "System": "CloudOps"
            },
            "tags_all": {
              "Env": "dev",
              "Name": "task-mgmt-vpc",
              "Owner": "atul.pandey@talentica.com",
              "System": "CloudOps"
            }
          }
        }
      ]
    }
  ]
}